Changed some settings to make sure the background image of hero is behind the navbar

--- a/resources/styles/about/about-hero.scss
+++ b/resources/styles/about/about-hero.scss
@@ -6,6 +6,8 @@ section.about-hero {
     url(~@images/about-bg.jpg);
   background-position: center;
   background-repeat: no-repeat;
+  z-index: 1;
+  top: -10vh;
   .container {
     display: flex;
     flex-direction: column;
