--- a/resources/styles/about/features.scss
+++ b/resources/styles/about/features.scss
@@ -7,6 +7,7 @@ section.features {
     width: 50%;
     height: 30%;
     margin-bottom: 100px;
+    margin-top: 50px;
 
     .header {
       width: 100%;
@@ -15,7 +16,6 @@ section.features {
       flex-direction: column;
       justify-content: center;
       align-items: flex-end;
-      margin-top: 100px;
 
       .border {
         width: 15%;
